sd/static/sd/style.css
@import url('https://fonts.googleapis.com/css?family=Merriweather+Sans:400,400i,700&display=swap');


/*TODO: make responsive to small window width; */
/* References for column layout and sidebar:;
   https://www.w3schools.com/howto/howto_css_fixed_sidebar.asp
*/

body {
  margin: 0px;
  font-style: normal;
  font-size: 1em;
  background-color: white;
  font-family: "Merriweather Sans";
}

/* orange, large */
h1 {
  font-weight: bold;
  font-size: 1.5em;
  color: #ed9a00;
}

/* white, large */
h2 {
  font-size: 1.5em;
  color: white;
  font-weight: bold;
}

/* blue,large */
h3 {
  font-weight: bold;
  font-size: 1.5em;
  color: #9dc7ba;
}

/* black, large */
h4 {
  font-weight: bold;
  font-size: 1.5em;
}

/*black, smaller */
h5 {
  font-weight: bold;
  font-size: 1em;
}

p {
  font-style: normal;
  font-size: 1em;
}

ul {
  font-style: normal;
  font-size: 1em;
}

/* links */
 a {
  text-decoration: none;

}

hr {
  display: block;
  border-style: inset;
  background-color: #c8e6dd;
  border-color: transparent;
  height: 0.3em;
  border-bottom-color: lightgrey;
}

.greyline {
  width: 100%;
  display: block;
  border-style: inset;
  background-color: #f0f0f0;
  border-color: transparent;
  height: 0.05em;
  border-radius: 10px;
  margin-top: 1em;
  margin-bottom: 1em;
}


button{
  outline:none;
}

button:hover {
  cursor: pointer;
}

/*top navigation */

.header {
  position: fixed;
  width: 100%;
  top: 0px;
  margin:0px auto;
  padding-left: 4em;
  padding-right: 4em;
  padding-top: 0.3em;
  padding-bottom: auto;
  background: #c8e6dd;
  margin-bottom:7em;
  color: white;
  font-size: 1em;
  border-bottom: 2.5px solid #f0f0f0;
  z-index: 2;
}

.logo {
  vertical-align: middle;
  float: left;
  padding-right: 1em;
  padding-top: 0.5em;
}

#maintitle {
  width: 5em;
}

.icons {
  vertical-align: middle;
  float: right;
  padding-bottom: 1.2em;
  padding-top: 1.2em;
  padding-right: 1.5em;
  padding-left: 1em;
}

.icons#lasticon {
  padding-right: 6.5em;
}

.header input[type=text] {
  width: 7em;
  color: white;
  padding: 6px;
  border-radius: 10px;
  outline:none;
  border: 2.5px solid #f0f0f0;
  margin-right: 16px;
  font-size: 1em;
}


/* main feed */

.helptext {
  font-size: small;
  color: grey;

}

/* general feed placment */
.feed {
  margin-top: 7em;
  margin-left: 25em; /* Same as the width of the sidebar */
  margin-right: 6em;
  margin-bottom: 6em;
}

.feed#nosidebar {
  margin-left: 6em;
}


/* each feed item style */
.feeditem {
  border-radius: 10px;
  background-color: white;
  margin-bottom: 2em;
  top: 1; /* start after header */
  padding: 2em 3em 2em 3em ;
  border: 2.5px solid #f0f0f0;
}


/* feed item text styling */

#author {
  font-weight: bold;
  font-size: 1em;
}

#date {
  color: grey; 
  font-style: italic;
  font-size: 0.7em;
}

#title {
  font-size: 1.5em;
  color: black; 
  font-weight: bold;
  font-style: normal;
  text-align: center;
}

#postBody {
  color: black;
  text-align: center;
}


.feedimage {
  max-width: 10em;
  max-height: 10em;
  display: block;
  padding-bottom: 2em;
  margin-left: auto;
  margin-right: auto;
}

.navigate-feed{
  background-color: white;
  margin-top: 2em;
  margin-bottom: 2em;
}


/* comments */

/* lists number of comments in feed item */
#commentsifyesButton {
  color: #ed9a00; 
  font-style: italic;
  font-size: 0.9em;
}

#commentsifyesButton:hover {
  cursor: pointer;
}

/* show this section if comment option is clicked */
#addcommentifyesButton {
  float: right;
  color: #9dc7ba; 
  font-style: italic;
  font-size: 0.9em;
}

#newcomment {
  float: left;
  width: 98%
}

#showComments {
  margin-top: 2em;
}

.commentitem {
  border-radius: 10px;
  background-color: white;
  margin-bottom: 1em;
  top: 1; /* start after header */
  padding: 0.5em 1em 0.5em 1em ;
  border: 1.5px solid #f0f0f0;
 }

#commentauthor {
  font-weight: bold;
  font-size: 0.8em;
}

#commentdate {
  color: grey; 
  font-style: italic;
  font-size: 0.6em;
}

#commentbody {
  font-size: 0.8em;
}

#submit-blue-button {
  font-size: 1em;
  width: auto;
  float: right;
  color: #9dc7ba;
  margin-bottom: 1em;
}

#submit-blue-button:hover {
  color: #9dc7bab6;
  cursor: pointer;
}

#addComment {
  background-color: white;
  margin-bottom: 1em;
  border: 1.4px solid white;
}

#addcommentfield {
  height: 2em;
}

/* input[id="id_password"] {
  font-family: 'Comic Sans MS';
} */


/* side bar */

.yourfeed {
  vertical-align: middle;
  float: left;
  padding-bottom: auto;
  padding-top: 1em;
  padding-right: 1em;
  padding-left: 1em;
}

.plusicon {
  vertical-align: middle;
  float: left;
  padding-bottom: auto;
  padding-top: 0.7em;
  padding-right: 1em;
  padding-left: 1em;
}

.compassicon {
  vertical-align: middle;
  float: left;
  padding-bottom: auto;
  padding-top: 1em;
  padding-right: 1em;
  padding-left: 1em;
}

.filtericon {
  vertical-align: middle;
  float: left;
  padding-bottom: auto;
  padding-top: 1.4em;
  padding-right: 1em;
  padding-left: 1em;
}

/* sidebar menu for new post */
.sidebarpost {
  margin-left: 4em;
  margin-top: 0em;
  height: 5em; /* Full-height: remove this if you want "auto" height */
  width: 15em; /* Set the width of the sidebar */
  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
  z-index: 1; /* Stay on top */
  top: 1; /* start after header */
  left: 0;
  background-color: white;
  overflow-x: hidden; /* Disable horizontal scroll */
  overflow-y: hidden; /* Disable vertical scroll */
  padding-top: 20px;
  border-radius: 10px;
  border: 2.5px solid #f0f0f0;
}
/* ... */

